syntax = "proto3";

option go_package = "github.com/li-zeyuan/micro/micro.common.api/pb/profile";

package profile;

message Profile {
    int64 uid = 1;
    string name = 2;
    string passport = 3;
    string password = 4;
    int32 gender = 5;
    int64 birth = 6;
    string portrait = 7;
    string hometown = 8;
    string description = 9;
}

message SaveReq {
    repeated Profile profiles = 1;
}

message SaveResp {
    int32 dm_error = 1;
    string error_msg = 2;
    bytes data = 3;
}

message UpdateReq {
    repeated Profile profiles = 1;
}

message UpdateResp {
    int32 dm_error = 1;
    string error_msg = 2;
    bytes data = 3;
}

message GetReq {
    repeated int64 uids = 1;
}

message GetRespList {
    repeated Profile list = 1;
}

message GetResp {
    int32 dm_error = 1;
    string error_msg = 2;
    GetRespList data = 3;
}

message GetByPassportReq {
    repeated string passports = 1;
}

message GetByPassportRespList {
    repeated Profile list = 1;
}

message GetByPassportResp {
    int32 dm_error = 1;
    string error_msg = 2;
    GetRespList data = 3;
}

message DelRep {
    repeated int64 uids = 1;
}

message DelResp {
    int32 dm_error = 1;
    string error_msg = 2;
    bytes data = 3;
}

service ProfileService {
    rpc Save(SaveReq)  returns(SaveResp) {}
    rpc Update(UpdateReq)  returns(UpdateResp) {}
    rpc Del(DelRep)  returns(DelResp) {}
    rpc Get(GetReq)  returns(GetResp) {}
    rpc GetByPassport(GetByPassportReq)  returns(GetByPassportResp) {}
}

